--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -40,7 +40,10 @@
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
 	"account.expired": "Expired",
+	"account.extend_trial": "Extend the free trial",
 	"account.free_trial": "Free trial",
+	"account.free_trial_ended.description": "The 15-day trial has transpired and your account has been blocked. You can either subscribe to one of our plans or contact us for an extension of the trial.",
+	"account.free_trial_ended.title": "Oh! Your free trial has ended",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.home": "Account dashboard",
@@ -113,6 +116,7 @@
 	"autocomplete.section.paragraph": "Suggested paragraph",
 	"billing.address": "Address",
 	"billing.already_available": "Already available",
+	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
@@ -154,6 +158,8 @@
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
 	"billing.free": "Free",
+	"billing.history": "History",
+	"billing.history.title": "Account billing history",
 	"billing.hour": "hour",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
@@ -165,6 +171,7 @@
 	"billing.monthly_estimation": "Overconsumption is estimated to cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.not_company": "I'm not a company",
+	"billing.order_number": "Order number",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
 	"billing.parameter.paragraphs": "How many extracted paragraphs?",
@@ -199,6 +206,7 @@
 	"billing.subscription.title": "Subscription tiers",
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
+	"billing.tier": "Tier",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
@@ -310,6 +318,7 @@
 	"generic.select_tags": "Select the labels",
 	"generic.sequential": "sequential",
 	"generic.settings": "Settings",
+	"generic.show_more": "Show more",
 	"generic.showing": "Showing",
 	"generic.skip": "Skip",
 	"generic.slug": "Slug",
