--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -33,7 +33,10 @@
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.expired": "Expirada",
+	"account.extend_trial": "Ampliar Prueba gratis",
 	"account.free_trial": "Prueba gratis",
+	"account.free_trial_ended.description": "La prueba de 15 días ha finalizado y tu cuenta ha sido bloqueada. Puedes suscribirte a uno de nuestros planes o contactar con nosotros para ampliar el período de prueba.",
+	"account.free_trial_ended.title": "¡Oh! Tu prueba gratuita ha finalizado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.home": "Panel de cuenta",
@@ -102,6 +105,7 @@
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
 	"billing.already_available": "Ya disponible",
+	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
@@ -141,6 +145,8 @@
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
+	"billing.history": "Historial",
+	"billing.history.title": "Historial de facturación",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
@@ -152,6 +158,7 @@
 	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
+	"billing.order_number": "Número de pedido",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
@@ -186,6 +193,7 @@
 	"billing.subscription.title": "Niveles de subscripción",
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.tier": "Nivel",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
@@ -293,6 +301,7 @@
 	"generic.select_tags": "Selecciona etiquetas",
 	"generic.sequential": "secuencial",
 	"generic.settings": "Configuración",
+	"generic.show_more": "Mostrar más",
 	"generic.showing": "Mostrando",
 	"generic.skip": "Omitir",
 	"generic.slug": "Slug",
