--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -14,7 +14,7 @@
 	"history.knowledge_box": "Caja de conocimiento",
 	"history.source": "Origen",
 	"history.title": "Historial de subidas",
-	"login.button": "Iniciar sessión",
+	"login.button": "Iniciar sesión",
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
 	"pastanaga.cancel": "Cancelar",
