[sc-5580] Add missing translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -636,8 +636,10 @@
 	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.annotation": "Anotació",
 	"resource.tooltip.classification": "Classificació",
+	"resource.tooltip.delete": "Suprimeix",
 	"resource.tooltip.edition": "Edició",
 	"resource.tooltip.preview": "Vista prèvia",
+	"resource.tooltip.reprocess": "Reprocessament",
 	"resource.visible_columns_dropdown": "Columnes mostrades",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
