--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -657,8 +657,10 @@
 	"resource.tooltip.add-field": "Add a field",
 	"resource.tooltip.annotation": "Annotation",
 	"resource.tooltip.classification": "Classification",
+	"resource.tooltip.delete": "Delete",
 	"resource.tooltip.edition": "Edition",
 	"resource.tooltip.preview": "Preview",
+	"resource.tooltip.reprocess": "Reprocess",
 	"resource.visible_columns_dropdown": "Displayed columns",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
