--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -636,8 +636,10 @@
 	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.annotation": "Anotación",
 	"resource.tooltip.classification": "Clasificación",
+	"resource.tooltip.delete": "Borrar",
 	"resource.tooltip.edition": "Edición",
 	"resource.tooltip.preview": "Avance",
+	"resource.tooltip.reprocess": "Reprocesar",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
