[sc-5567]: Allow to create own account after invitation

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -243,6 +243,7 @@
 	"generic.copied": "Copiat!",
 	"generic.copy": "Copiar",
 	"generic.create": "Crear",
+	"generic.create_account": "Crear compte",
 	"generic.creation_date": "Data creació",
 	"generic.dangerous": "Zona perillosa",
 	"generic.dashboard": "Dashboard",
