--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -257,6 +257,7 @@
 	"generic.copied": "Copied!",
 	"generic.copy": "Copy",
 	"generic.create": "Create",
+	"generic.create_account": "Create account",
 	"generic.creation_date": "Creation date",
 	"generic.dangerous": "Dangerous zone",
 	"generic.dashboard": "Dashboard",
