--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -243,6 +243,7 @@
 	"generic.copied": "Copiado!",
 	"generic.copy": "Copiar",
 	"generic.create": "Crear",
+	"generic.create_account": "Crear una cuenta",
 	"generic.creation_date": "Fecha creación",
 	"generic.dangerous": "Zona peligrosa",
 	"generic.dashboard": "Dashboard",
