--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -45,7 +45,7 @@
 	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
 	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
 	"upload.source.permanent-sync": "Synchronisation permanente",
-	"upload.source.quick_access_name": "Nommez votre source",
+	"upload.source.quick_access_name": "Nommez votre connecteur",
 	"upload.source.title": "Source d'origine",
 	"upload.steps.configure": "Configurer",
 	"upload.steps.data": "Choisir les données",
