[sc-5691] Implement consumption charts

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -1,22 +1,21 @@
 {
 	"account.account_name_invalid": "El nom del compte no és vàlid",
+	"account.accumulated_consumption": "Consum diari acumulat per funcionalitat",
 	"account.active_config": "Configuració activa",
 	"account.add_stash": "Afegir caixa coneixement",
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.billing": "Pagament i subscripció",
-	"account.chart_documents": "Documents no multimèdia",
-	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
-	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
-	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
+	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de \"Hores de mèdia\".",
 	"account.chart_error_processing_status": "No s'han pogut obtenir les dades dels \"recursos pendents de processar\".",
-	"account.chart_media_hours": "Horari dels mitjans",
-	"account.chart_ML_characters": "Caràcters ML",
+	"account.chart_error_searches": "No s'han pogut obtenir les dades de \"Cerques\".",
+	"account.chart_error_train_seconds": "No s'han pogut obtenir les dades de \"Hores d'entrenament\".",
+	"account.chart_media_seconds": "Hores de mèdia",
 	"account.chart_number_resources": "Nombre de recursos",
 	"account.chart_range_label": "Darrers {{hours}}",
-	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
-	"account.chart_title_processed": "Recursos processats",
+	"account.chart_searches": "Cerques",
+	"account.chart_train_seconds": "Hores d'entrenament",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
@@ -48,6 +47,7 @@
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
+	"account.monthly_consumibles": "Consum mensuals",
 	"account.new_token": "Nou Token",
 	"account.nua_client": "Nom del client",
 	"account.nua_key_activity": "Registre d'activitat",
@@ -72,6 +72,7 @@
 	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
+	"account.threshold": "Llindar de consum",
 	"account.title": "Nom del compte",
 	"account.title_help": "Nom del compte",
 	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
