--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1,22 +1,21 @@
 {
 	"account.account_name_invalid": "Invalid account name",
+	"account.accumulated_consumption": "Accumulated daily consumption by feature",
 	"account.active_config": "Active configuration",
 	"account.add_stash": "Add knowledge box",
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
 	"account.billing": "Payment & Subscription",
-	"account.chart_documents": "Non-media documents",
-	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
-	"account.chart_error_docs_no_media": "Unable to fetch \"Non-media document\" data",
 	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
 	"account.chart_error_processing_status": "Unable to fetch \"resources pending to be processed\" data",
-	"account.chart_media_hours": "Media hours",
-	"account.chart_ML_characters": "ML characters",
+	"account.chart_error_searches": "Unable to fetch \"Searches\" data",
+	"account.chart_error_train_seconds": "Unable to fetch \"Train hours\" data",
+	"account.chart_media_seconds": "Media hours",
 	"account.chart_number_resources": "Number of resources",
 	"account.chart_range_label": "Last {{hours}}",
-	"account.chart_title_pending_resources": "Resources pending to be processed",
-	"account.chart_title_processed": "Processed resources",
+	"account.chart_searches": "Searches",
+	"account.chart_train_seconds": "Training hours",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
 	"account.consuming": "Consuming",
@@ -55,6 +54,7 @@
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
+	"account.monthly_consumibles": "Monthly consumibles",
 	"account.new_token": "New Token",
 	"account.nua_client": "Client name",
 	"account.nua_key_activity": "NU-API key activity log",
@@ -81,6 +81,7 @@
 	"account.stash.retire": "Unpublish",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
+	"account.threshold": "Consumption threshold",
 	"account.title": "Account name",
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
