--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -1,22 +1,21 @@
 {
 	"account.account_name_invalid": "El nombre de la cuenta no es válido",
+	"account.accumulated_consumption": "Consumo diario acumulado por funcionalidad",
 	"account.active_config": "Configuración activa",
 	"account.add_stash": "Añadir caja de conocimiento",
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.billing": "Pago y suscripción",
-	"account.chart_documents": "Documentos no multimedia",
-	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
-	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
-	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
+	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de media\"",
 	"account.chart_error_processing_status": "No se pueden recuperar los datos de \"recursos pendientes de procesamiento\"",
-	"account.chart_media_hours": "Horas de los medios",
-	"account.chart_ML_characters": "Caracteres ML",
+	"account.chart_error_searches": "No se pueden recuperar los datos de \"Búsquedas\"",
+	"account.chart_error_train_seconds": "No se pueden recuperar los datos de \"Horas de entrenamiento\"",
+	"account.chart_media_seconds": "Horas de media",
 	"account.chart_number_resources": "Número de recursos",
 	"account.chart_range_label": "Último {{hours}}",
-	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
-	"account.chart_title_processed": "Recursos procesados",
+	"account.chart_searches": "Búsquedas",
+	"account.chart_train_seconds": "Horas de entrenamiento",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
@@ -48,6 +47,7 @@
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
+	"account.monthly_consumibles": "Consumo mensuales",
 	"account.new_token": "Nuevo Token",
 	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad",
@@ -72,6 +72,7 @@
 	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar el máximo de KB",
 	"account.stash.users": "Gestión de usuarios",
+	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre de la cuenta",
 	"account.title_help": "Nombre de la cuenta",
 	"account.token_description": "<strong>¡Importante!</strong> Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
