--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -6,9 +6,7 @@
 	"generic.server_up": "Sync server is up",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
-	"history.active": "Active uploads",
-	"history.back": "Back to history",
-	"history.clean": "Clean history",
+	"history.clear": "Clear history",
 	"history.data": "Data",
 	"history.date": "Date",
 	"history.knowledge_box": "Knowledge box",
