--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -6,9 +6,7 @@
 	"generic.server_up": "El servidor de sincronización está activo",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.upload": "Subir",
-	"history.active": "Subidas activas",
-	"history.back": "Volver al historial",
-	"history.clean": "Limpiar historial",
+	"history.clear": "Borrar historial",
 	"history.data": "Datos",
 	"history.date": "Fecha",
 	"history.knowledge_box": "Caja de conocimiento",
