--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -6,9 +6,7 @@
 	"generic.server_up": "Le serveur de synchronisation est opérationnel",
 	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
-	"history.active": "Téléchargements actifs",
-	"history.back": "Retour à l'histoire",
-	"history.clean": "Nettoyer historique",
+	"history.clear": "Effacer l'historique",
 	"history.data": "Données",
 	"history.date": "Date",
 	"history.knowledge_box": "Knowledge box",
