--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -6,9 +6,7 @@
 	"generic.server_up": "El servidor de sincronització està activat",
 	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
-	"history.active": "Pujades actives",
-	"history.back": "Tornar a l'historial",
-	"history.clean": "Netjar historial",
+	"history.clear": "Netjar historial",
 	"history.data": "Dades",
 	"history.date": "Data",
 	"history.knowledge_box": "Caixa de coneixement",
