Update resource profile form
  - Use date-picker instead of simple input for created and modified field
  - Add a textarea allowing to save (and display) extra metadata on a resource
  - Fix resource page layout, preventing the scrollbar to be on top of the content

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -508,6 +508,9 @@
 	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.title": "👋​ Benvinguts a Nuclia!",
 	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
+	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
+	"pastanaga.calendar.months": "Mesos",
+	"pastanaga.calendar.years": "Anys",
 	"pastanaga.cancel": "Cancel·lar",
 	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Canviar contrasenya",
@@ -571,6 +574,8 @@
 	"resource.entities.quantity": "Quantitat",
 	"resource.entities.time": "Temps",
 	"resource.entities.work_of_art": "Obres",
+	"resource.extra-metadata": "Metadades addicionals",
+	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
 	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
 	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
