--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -526,6 +526,9 @@
 	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.title": "👋​ Welcome to Nuclia!",
 	"onboarding.updates": "Get occasional updates about Nuclia",
+	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
+	"pastanaga.calendar.months": "Months",
+	"pastanaga.calendar.years": "Years",
 	"pastanaga.cancel": "Cancel",
 	"pastanaga.confirm": "Confirm",
 	"profile.change_password": "Reset password",
@@ -592,6 +595,8 @@
 	"resource.entities.quantity": "Quantity",
 	"resource.entities.time": "Time",
 	"resource.entities.work_of_art": "Art",
+	"resource.extra-metadata": "Extra metadata",
+	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.failed_resources_popover": "Processing failed files",
 	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
