--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -508,6 +508,9 @@
 	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
 	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
+	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
+	"pastanaga.calendar.months": "Meses",
+	"pastanaga.calendar.years": "Años",
 	"pastanaga.cancel": "Cancelar",
 	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Cambiar contraseña",
@@ -571,6 +574,8 @@
 	"resource.entities.quantity": "Cantidad",
 	"resource.entities.time": "Tiempo",
 	"resource.entities.work_of_art": "Obras",
+	"resource.extra-metadata": "Metadatos adicionales",
+	"resource.extra-metadata.invalid-json": "JSON inválido",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
 	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
 	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
