[sc-5835] Support autofilter option in widget

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -810,6 +810,8 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.answers": "Answer generation",
 	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
+	"stash.widgets.autofilter": "Automatic filtering",
+	"stash.widgets.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
 	"stash.widgets.configuration": "Widget configuration",
 	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.editLabels.help": "Allows to add/remove labels from the resource view",
