[sc-5454]: Improve NUA key management page layout

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -55,6 +55,7 @@
 	"account.nua_key_activity_title": "{{key}} registro de actividad",
 	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
+	"account.nua_keys": "Claves de Nuclia Understanding API",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.public": "Público",
@@ -513,6 +514,7 @@
 	"pastanaga.calendar.years": "Años",
 	"pastanaga.cancel": "Cancelar",
 	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.at": "a",
 	"profile.change_password": "Cambiar contraseña",
 	"profile.edit": "Editando el perfil de: ",
 	"profile.fill_data": "Por favor,  configura tus datos antes de empezar a descubrir conocimiento",
