--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -55,6 +55,7 @@
 	"account.nua_key_activity_title": "{{key}} registre d'activitat",
 	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
+	"account.nua_keys": "Claus de Nuclia Understanding API",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
 	"account.public": "Públic",
@@ -513,6 +514,7 @@
 	"pastanaga.calendar.years": "Anys",
 	"pastanaga.cancel": "Cancel·lar",
 	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.at": "a",
 	"profile.change_password": "Canviar contrasenya",
 	"profile.edit": "Editant el perfil de: ",
 	"profile.fill_data": "Configura les teves dades abans de començar a descobrir coneixement!",
