--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -62,7 +62,7 @@
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_key_delete": "Delete Nuclia Understanding API key",
 	"account.nua_key_delete_warning": "By deleting this key, all the ongoing jobs will be lost.",
-	"account.nua_keys": "Understanding API keys",
+	"account.nua_keys": "Nuclia Understanding API keys",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
 	"account.public": "Public",
@@ -531,6 +531,7 @@
 	"pastanaga.calendar.years": "Years",
 	"pastanaga.cancel": "Cancel",
 	"pastanaga.confirm": "Confirm",
+	"pastanaga.datetime.at": "at",
 	"profile.change_password": "Reset password",
 	"profile.edit": "Editing profile from: ",
 	"profile.fill_data": "Add content and discover what Nuclia can do!",
