--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -781,6 +781,8 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.answers": "Generació de respostes",
 	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
+	"stash.widgets.autofilter": "Filtrat automàtic",
+	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
 	"stash.widgets.configuration": "Configuració del widget",
 	"stash.widgets.editLabels": "Edita les etiquetes",
 	"stash.widgets.editLabels.help": "Permet afegir/eliminar etiquetes de la vista de recursos",
