--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -857,6 +857,10 @@
 	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.progress-dialog-title": "Cola de subidas",
+	"upload.q_and_a": "Cargar preguntas y respuestas",
+	"upload.qna_csv_description": "Cree un recurso de preguntas y respuestas seleccionando un archivo CSV con 2 columnas: <code>Pregunta, Respuesta</code>",
+	"upload.qna_csv_preview.answer": "Responder",
+	"upload.qna_csv_preview.question": "Pregunta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
