--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -857,6 +857,10 @@
 	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.progress-dialog-title": "Cua de pujades",
+	"upload.q_and_a": "Carregueu preguntes i respostes",
+	"upload.qna_csv_description": "Creeu un recurs de preguntes i respostes seleccionant un fitxer CSV amb 2 columnes: <code>Pregunta, resposta</code>",
+	"upload.qna_csv_preview.answer": "Resposta",
+	"upload.qna_csv_preview.question": "Pregunta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
