--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -901,6 +901,7 @@
 	"upload.qna_csv_description": "Create a Q&A resource by selecting a CSV file with 2 columns: <code>Question, Answer</code>",
 	"upload.qna_csv_preview.answer": "Answer",
 	"upload.qna_csv_preview.question": "Question",
+	"upload.qna_format": "Answer format",
 	"upload.select_csv": "Select CSV",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
