--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -861,6 +861,7 @@
 	"upload.qna_csv_description": "Cree un recurso de preguntas y respuestas seleccionando un archivo CSV con 2 columnas: <code>Pregunta, Respuesta</code>",
 	"upload.qna_csv_preview.answer": "Responder",
 	"upload.qna_csv_preview.question": "Pregunta",
+	"upload.qna_format": "Formato de respuesta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
