[sc-5890] Allow to show an authentication token

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -241,6 +241,7 @@
 	"generic.all": "All",
 	"generic.allow": "Allow",
 	"generic.announce": "User information",
+	"generic.authentication_token": "Authentication token",
 	"generic.back": "Back",
 	"generic.back_to_accounts": "Back to Accounts",
 	"generic.back_to_home": "Back to Home Page",
