--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -229,6 +229,7 @@
 	"generic.all": "Tots",
 	"generic.allow": "Permetre",
 	"generic.announce": "Informació de l'usuari",
+	"generic.authentication_token": "Token d'autenticació",
 	"generic.back": "Enrere",
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
