--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -229,6 +229,7 @@
 	"generic.all": "Todos",
 	"generic.allow": "Permitir",
 	"generic.announce": "Informacion del usuario",
+	"generic.authentication_token": "Token de autenticación",
 	"generic.back": "Volver",
 	"generic.back_to_home": "Volver a la Home",
 	"generic.by_relevance": "por relevancia",
