[sc-5892] refactor text display (#820)
* Allow to select answer's format when uploading Q&A

* Fix highlighted message style in conversation

* Add missing conversation field translation in dashboard

* [sc-5892]: Refactor text display with markdown, html and plain text renderers

* Prevent content-type to be set to "null" during upload

* Update Pastanaga to prevent error message in the console when opening a confirmation message

* Dependabot fixes

* Remove unused params

* Better names and common style for TextViewers

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -584,6 +584,7 @@
 	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
 	"resource.field-classification": "Classificació de paràgrafs",
 	"resource.field-classification.help": "Trieu una etiqueta i seleccioneu els paràgrafs sobre els quals voleu que s'apliqui",
+	"resource.field-conversation": "Camp de conversa",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
@@ -862,6 +863,7 @@
 	"upload.qna_csv_description": "Creeu un recurs de preguntes i respostes seleccionant un fitxer CSV amb 2 columnes: <code>Pregunta, resposta</code>",
 	"upload.qna_csv_preview.answer": "Resposta",
 	"upload.qna_csv_preview.question": "Pregunta",
+	"upload.qna_format": "Format de resposta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
