--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -604,6 +604,7 @@
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification": "Paragraphs classification",
 	"resource.field-classification.help": "Choose a label and then select the paragraphs on which you want it to be applied",
+	"resource.field-conversation": "Conversation Field",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
@@ -902,6 +903,7 @@
 	"upload.qna_csv_description": "Create a Q&A resource by selecting a CSV file with 2 columns: <code>Question, Answer</code>",
 	"upload.qna_csv_preview.answer": "Answer",
 	"upload.qna_csv_preview.question": "Question",
+	"upload.qna_format": "Answer format",
 	"upload.select_csv": "Select CSV",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
