--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -25,6 +25,7 @@
 	"entities.work_of_art": "Œuvres",
 	"error.audio-loading": "Une erreur s'est produite lors du chargement du fichier audio.",
 	"error.feature-blocked": "La fonction de recherche n'est pas autorisée pour le moment.",
+	"error.partial-results": "Désolé, le système est surchargé et n'a pu fournir qu'un résultat partiel.",
 	"error.processing": "Le traitement de cette ressource n'est pas complet",
 	"error.search": "Oups! quelque chose ne va pas. Nous y travaillons",
 	"form.title-only": "Rechercher uniquement dans le titre",
