--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -27,6 +27,7 @@
 	"entities.work_of_art": "Obras",
 	"error.audio-loading": "Ocurrió un error al cargar el archivo de audio.",
 	"error.feature-blocked": "La función de búsqueda no está permitida en este momento.",
+	"error.partial-results": "Lo sentimos, el sistema está sobrecargado y solo pudo proporcionar un resultado parcial.",
 	"error.processing": "Este recurso aún no se ha procesado por completo",
 	"error.search": "¡Ups! algo ha ido mal. Estamos trabajando en ello",
 	"form.title-only": "Buscar solo en el título",
