Allow to select filter types

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -789,12 +789,16 @@
 	"stash.widgets.configuration": "Configuració del widget",
 	"stash.widgets.editLabels": "Edita les etiquetes",
 	"stash.widgets.editLabels.help": "Permet afegir/eliminar etiquetes de la vista de recursos",
+	"stash.widgets.entities": "Entitats",
 	"stash.widgets.entityAnnotation": "Anotació de l'entitat",
 	"stash.widgets.entityAnnotation.help": "Activa l'anotació d'entitats al visor",
 	"stash.widgets.filter": "Filtre",
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
+	"stash.widgets.filter_type": "Tipus de filtre",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
 	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
+	"stash.widgets.labels": "Etiquetes",
+	"stash.widgets.labels_entities": "Etiquetes i entitats",
 	"stash.widgets.navigateToFile": "Navega cap als arxius",
 	"stash.widgets.navigateToFile.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
 	"stash.widgets.navigateToLink": "Navega cap als enllaços",
